app/views/pages/players/players.styl
.players__head
  flex 1
  display flex
  flex-direction column
  width 100%

.players__head-expand
  flex 0 0 auto
  display flex
  cursor pointer
  padding 0 16px
  .icon
    transition opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms
    border-radius 99em
  &:hover .icon
    background white

.players__head-actions
  flex 1
  display flex
  justify-content flex-end

.players__filters
  flex 0 0 auto
  display flex
  flex-direction column
  width 100%

  &.expanded .players__head-expand .icon
    transform rotate(180deg)

.players__filters-row
  flex 0 0 auto
  border-bottom 1px solid $borderColor
  padding 8px 32px
  display flex
  align-items center
  overflow-y visible
  overflow-x scroll

.players__header
  flex 1
  height 40px
  display flex
  align-items center
  font-weight 500
  border-bottom 1px solid $borderColor

.row__group
.player__row-group
  flex 1
  display flex
  flex-direction column
  justify-content center
  border-left 1px solid $borderColor
  align-items center
  height 100%

.row__group-head
.player__row-group-head
  flex 0 0 auto
  text-transform uppercase
  font-size 10px
  padding 4px
  border-bottom 1px solid $borderColor
  width 100%
  text-align center

.row__group-body
.player__row-group-body
  flex 1
  display flex
  justify-content space-evenly
  align-items center
  width 100%

